# jarvis

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  STATUS.md
Ideation/: BACKLOG.md  CLAUDE.md  MORNING-BRIEFING-IMPLEMENTATION-PLAN.md  MORNING-BRIEFING-RESEARCH.md  SOCIAL-CIRCLE-IMPLEMENTATION-PLAN.md  SOCIAL-CIRCLE-RESEARCH.md  SOCIAL-CIRCLE-SPEC-REVIEW.md  TASK-REMINDERS-RESEARCH.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3a2a16c50c46_initial_schema.py
backend/scripts/: seed_reminders.py
backend/src/: config.py  database.py  main.py
backend/src/briefing/: CLAUDE.md  clothing.py  constants.py  divvy.py  engine.py  message_builder.py  recommendation.py  schemas.py  weather.py
backend/src/engine/: heartbeat.py  message_builder.py  reminder_engine.py  telegram_sender.py
backend/src/models/: __init__.py  child.py  contact.py  event.py  note.py  reminder.py
backend/src/routes/: briefing.py  children.py  contacts.py  events.py  health.py  notes.py  reminders.py  search.py  upcoming.py
backend/src/schemas/: __init__.py  child.py  contact.py  event.py  note.py  reminder.py  search.py  upcoming.py
backend/tests/: conftest.py  test_contacts.py  test_events.py  test_reminder_engine.py  test_search.py  test_upcoming.py
bot/: package-lock.json  package.json
bot/src/: config.ts  index.ts
docs/: PRINCIPLES.md
docs/incidents/: INC-001-daily-weather-code-ignored.md
specs/: 001-social-circle.md  002-morning-briefing.md  003-task-reminders.md  CLAUDE.md  REVIEW-002-BACKEND.md  TEMPLATE.md
(+29 files in other folders)
